@@ -4,6 +4,8 @@
 
 == rufus-doric - 0.1.11    not yet released
 
+- custom views x(key) and by_x(x) are both OK
+
 
 == rufus-doric - 0.1.10    released 2010/05/14
 
